Updated README file

--- a/README
+++ b/README
@@ -1,3 +1,8 @@
 ## Houtan Noushmehr
 September 27, 2011
 This project contains all the current working in house scripts for the Coetzee Lab.
+
+## 
+Each folder represents one in house script. View README within is folder for more information.
+
+##
