extracted version 0.1.4 so we can modify the same R code

--- a/README
+++ b/README
@@ -5,4 +5,7 @@ This project contains all the current working in house scripts for the Coetzee L
 ## 
 Each folder represents one in house script. View README within is folder for more information.
 
+
 ##
+Feb 3, 2012 - Reorganized folder project. Added new versions of FunciSNP.
+
